--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "js-cookie": "^2.2.1",
+    "lib-flexible": "^0.3.2",
     "qs": "^6.9.4",
     "vant": "^2.7.0",
     "vue": "^2.5.2",
@@ -60,6 +61,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.0.0",
+    "px2rem-loader": "^0.1.9",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.2",
     "semver": "^5.3.0",
